0.25.0 - 2016-10-xx
--------------------------------------------------------------------

    * Petrel and Pclient packages integrated.

      Name change: petrel.Config -> ServerConfig
                   pclient.Config -> ClientConfig

      All constructors have been renamed.

    * New option in ServerConfig: Reqlen, the maximum number of bytes
      which will be read for any request.

    * New option in ServerConfig: LogIP, whether to log Client IPs on
      connect or not.

    * Improvements in reliability and correctness of network handling.

    * Better consistency in messaging; efficiency improvements in Msg
      generation.

    * Doc overhaul

    * Version jump: unified versions and added 1


0.22.0 - 2016-03-30
--------------------------------------------------------------------

    * Use qsplit.LocationsOnce for faster separation of request
      command and args


0.21.0 - 2016-03-29
--------------------------------------------------------------------

    * Name change: asock -> petrel

    * asock.Asock is now petrel.Handler

    * Asock.AddHandler is now Handler.AddFunc

    * Valid settings for Handler.AddFunc's second argument (mode) have
      changed from "split"/"nosplit" to "args"/"blob". This change
      means that the setting now describes its use-case instead of its
      implementation.

    * Null request and unknown command messages no longer return a
      list of known handlers. This exposed internal state. Users
      should implement their own 'help' type handler.

    * Docs rewrite.


0.20.0 - 2016-03-09
--------------------------------------------------------------------

    * Oneshot connection mode is gone. It was a bad idea, torturously
      implemented.

    * Constructors now take *Config instead of Config.

    * Improvements to timeout handling (func call eliminated; no more
      local var creation and time.Duration casting on every network
      operation).


0.19.1 - 2015-12-10